<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>Unesco</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>unesco</name>
  <description>Project to solve Cazoo's assessment</description>
  <url>to do</url>

  <properties>
    <java.version>1.8</java.version>
    <log4j_version>2.17.2</log4j_version>
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <plugin.spotbugs.version>4.2.2</plugin.spotbugs.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <timestamp>${maven.build.timestamp}</timestamp>
    <linkXRef>false</linkXRef>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
    </dependency>

    <dependency>
      <groupId>com.google.googlejavaformat</groupId>
      <artifactId>google-java-format</artifactId>
      <version>1.7</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.22</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>2.0.0-alpha7</version>
    </dependency>


    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>[2.13.2.1,)</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>2.13.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
      <version>2.13.1</version>
    </dependency>
    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>4.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- main compiler options -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <showDeprecation>true</showDeprecation>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.8.1</version>
      </plugin>


      <!-- fails on build if PMD has issues -->
      <plugin>
        <artifactId>maven-pmd-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
              <goal>cpd-check</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.14.0</version>
      </plugin>

      <plugin>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <threshold>High</threshold>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>install</phase>
          </execution>
        </executions>
        <groupId>com.github.spotbugs</groupId>
        <version>${plugin.spotbugs.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <phase>integration-test</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>2.18.1</version>
      </plugin>

      <!-- test reports -->
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <destFile>
                ${project.build.directory}/jacoco.exec
              </destFile>
            </configuration>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>jacoco-prepare-agent</id>
          </execution>
          <execution>
            <configuration>
              <destFile>
                ${project.build.directory}/jacoco-it.exec
              </destFile>
            </configuration>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
            <id>jacoco-prepare-agent-integration</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>jacoco-report</id>
          </execution>
          <execution>
            <configuration>
              <fileSets>
                <fileSet
                  implementation="org.apache.maven.shared.model.fileset.FileSet">
                  <directory>${project.build.directory}
                  </directory>
                  <includes>
                    <include>*.exec</include>
                  </includes>
                </fileSet>
              </fileSets>
            </configuration>
            <goals>
              <goal>merge</goal>
            </goals>
            <id>merge</id>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.6</version>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.20.2</version>
        <configuration>
          <java>
            <toggleOffOn/>
            <removeUnusedImports/>
            <googleJavaFormat>
              <version>1.7</version>
              <style>GOOGLE</style>
            </googleJavaFormat>
          </java>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>apply</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-project-info-reports-plugin</artifactId>
      </plugin>
    </plugins>
  </reporting>

</project>